Fix z-index

--- a/components/sub-nav/sub-nav.module.css
+++ b/components/sub-nav/sub-nav.module.css
@@ -26,6 +26,7 @@
 .subNav {
   position: fixed;
   background-color: #e3e3e3;
+  z-index: 1;
 }
 
 .listSplit {
